fixed the quote bar container overlapping the logo and messing up the clickable link

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -80,6 +80,10 @@ img{
 	max-width:100%;
 }
 
+canvas{
+    background-color:#fff;
+}
+
 //table formatting
 
 table{
@@ -206,19 +210,19 @@ div .container:nth-of-type(2){
 }
 
 .outer-element:first-of-type{
-    box-shadow:0 0px 6px rgba(0,0,0,0.4);
+    box-shadow:0 0px 6px rgba(0,0,0,0.18);
     position:fixed;
 }
 
 .outer-element:nth-of-type(n+2):nth-of-type(odd){
     background-color:$white;
-    box-shadow:0 -6px 6px rgba(0,0,0,0.4);
+    box-shadow:0 -6px 6px rgba(0,0,0,0.18);
     z-index:5;
 }
 
 .outer-element:nth-of-type(n+2):nth-of-type(even){
     background-color:$light-gray2;
-    box-shadow:inset 0 6px 6px rgba(0,0,0,0.4);
+    box-shadow:inset 0 6px 6px rgba(0,0,0,0.18);
     z-index:1;
 } 
 
@@ -239,23 +243,23 @@ h1{
 }
 
 .outer-element:first-of-type{
-    box-shadow:0 0px 6px rgba(0,0,0,0.4);
+    box-shadow:0 0px 6px rgba(0,0,0,0.18);
     position:fixed;
 }
 
 .outer-element:nth-of-type(5){
- box-shadow:inset 0 6px 6px rgba(0,0,0,0.4);
+ box-shadow:inset 0 6px 6px rgba(0,0,0,0.18);
 }
 
 .outer-element:nth-of-type(n+6):nth-of-type(even){
     background-color:$white;
-    box-shadow:0 -6px 6px rgba(0,0,0,0.4);
+    box-shadow:0 -6px 6px rgba(0,0,0,0.18);
     z-index:5;
 }
 
 .outer-element:nth-of-type(n+6):nth-of-type(odd){
     background-color:$light-gray2;
-    box-shadow:inset 0 6px 6px rgba(0,0,0,0.4);
+    box-shadow:inset 0 6px 6px rgba(0,0,0,0.18);
     z-index:1;
 } 
 }
@@ -354,7 +358,7 @@ h1{
     margin-bottom:0;
 
     h1{
-        text-shadow:3px 3px 5px rgba(0,0,0,0.4);
+        text-shadow:3px 3px 5px rgba(0,0,0,0.18);
     }
 
     ul{
@@ -373,7 +377,7 @@ h1{
                 font-size:1.5rem;
                 color:$white;
                 font-weight:700;
-                text-shadow:2px 2px 3px rgba(0,0,0,0.4);
+                text-shadow:2px 2px 3px rgba(0,0,0,0.18);
             }
         }
     }
@@ -471,8 +475,11 @@ h1{
 
 .quote-bar{
     transition:500ms all ease;
-    padding: .5rem 0;
-
+    padding: 0rem 0;
+    width:100%;
+    position:absolute;
+    top:0px;
+    right:0;
 } 
 
 .quote-bar .container{
@@ -494,6 +501,11 @@ h1{
 
 .main-nav-wrapper{
     transition:500ms ease;
+
+    #navbarNav{
+        position:relative;
+    }
+
 
     .container{
         padding:0rem 0;
@@ -927,6 +939,7 @@ h1{
                 margin-bottom:0;
                 font-size:.75rem;
                 color:inherit;
+                line-height:130%;
             }
 
             h5{
@@ -1331,7 +1344,7 @@ a{
         padding: 0;
 
         input{
-            border:none;
+            border:1px solid $light-gray;
             padding:1rem;
         }
 
